# xlog-rs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
artifacts/bench-compare/20260306-harness-matrix/: results_raw.jsonl  summary.md
artifacts/bench-compare/20260306-perf5/: results_rust_async.jsonl  results_rust_sync.jsonl
artifacts/bench-compare/20260306-perf8/: results_rust_async.jsonl
artifacts/bench-compare/20260306-syncsteady-perf2/: results_raw.jsonl  summary.md
crates/mars-xlog-harmony-napi/: Cargo.toml  README.md
crates/mars-xlog-harmony-napi/src/: lib.rs
crates/xlog/: Cargo.toml  README.md
crates/xlog-android-jni/: Cargo.toml
crates/xlog-android-jni/src/: lib.rs
crates/xlog-core/: Cargo.toml  README.md
crates/xlog-core/examples/: bench_components.rs
crates/xlog-core/src/: appender_engine.rs  buffer.rs  compress.rs  crypto.rs  file_manager.rs  file_runtime.rs  formatter.rs  lib.rs  mmap_store.rs  oneshot.rs  platform_console.rs  platform_tid.rs  protocol.rs  record.rs  recovery.rs
crates/xlog-core/tests/: async_engine.rs  compress_roundtrip.rs  mmap_recovery.rs  oneshot_flush.rs
crates/xlog-sys/: Cargo.toml  README.md  build.rs
crates/xlog-sys/native/: mars_xlog_wrapper.cc  mars_xlog_wrapper.h  strutil_stub.cc
crates/xlog-sys/src/: lib.rs
crates/xlog-uniffi/: Cargo.toml  build.gradle.kts  gradle.properties  settings.gradle.kts  verify-targets.sh
crates/xlog-uniffi/gradle/: libs.versions.toml
crates/xlog-uniffi/gradle/wrapper/: gradle-wrapper.properties
crates/xlog-uniffi/src/: lib.rs
crates/xlog/examples/: bench_backend.rs
crates/xlog/src/: lib.rs  tracing_layer.rs
crates/xlog/src/backend/: ffi.rs  metrics.rs  mod.rs  rust.rs
docs/: benchmark_strategy.md  rust_core_code_review.md  rust_core_performance_review.md  rust_migration_review.md  rust_release_plan.md  rust_semantic_redlines.md  xlog_rust_migration_plan.md
examples/android-jni/: .gitignore  README.md  build.gradle.kts  local.properties  settings.gradle.kts
examples/android-jni/app/: build.gradle.kts
examples/android-jni/app/src/main/: AndroidManifest.xml
examples/android-jni/app/src/main/java/com/tencent/mars/xlog/example/: MainActivity.kt  XlogBridge.kt
examples/android-jni/app/src/main/res/layout/: activity_main.xml
examples/android-jni/app/src/main/res/values/: strings.xml  themes.xml
examples/android-jni/app/src/main/res/values-night/: themes.xml
scripts/xlog/: bench_matrix.tsv  decode_compare.sh  gen_fixtures.sh  run_backend_compare.sh  run_bench_matrix.sh  run_phase2c2_official.sh  run_phase5_regression.sh
